<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="30dp"
    tools:context=".WelcomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="186dp"
            app:srcCompat="@drawable/logotremp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/happy_monkey"
            android:text="@string/hi_we_re_tremp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/muli_light"
            android:letterSpacing="0.1"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <Button
                android:id="@+id/wellcom_frg_login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"

                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/wellcome_frg_signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:onClick="callSignUpScreen"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:transitionName="transition_signup"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>