<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordFragment"
    android:padding="30dp">



<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">


    <ImageView
        android:id="@+id/forget_password_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="callBackScreenFromForgetPassword"
        android:padding="5dp"
        app:srcCompat="?attr/actionModeCloseDrawable" />


    <TextView
        android:id="@+id/forget_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/muli_black"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/forget_npassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/forget_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/muli_light"
        android:gravity="center"
        android:text="@string/forgot_password_details"
        android:textAlignment="center"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textSize="16sp" />


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_password_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:startIconTint="@color/black">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli_extralight"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/forget_password_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_phone_number"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:onClick="verifyPhoneNumber"
        android:text="@string/reset_password"
        android:textColor="@color/white" />


</RelativeLayout>


</LinearLayout>


    </ScrollView>