<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="30dp"
    tools:context=".LoginFragment"
    android:id="@+id/login_frg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_field"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@android:drawable/stat_sys_phone_call"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_phone_number_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-medium"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_phone_number"
                    android:hint="@string/password_field"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-medium"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />


                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:id="@+id/forget_password_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password"
                    android:layout_marginTop="10dp">


                    <CheckBox
                        android:id="@+id/login_frg_remember_me_cb"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/black"
                        android:minHeight="48dp"
                        android:text="@string/remember_me"
                        android:textColor="@color/black" />


                    <Button
                        android:id="@+id/login_frg_forgot_pass_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="#00000000"
                        android:text="@string/forget_password" />


                </RelativeLayout>


                <Button
                    android:id="@+id/letTheUserLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forget_password_container"
                    android:layout_marginTop="20dp"
                    android:background="@color/black"
                    android:onClick="letTheUserLoggedIn"
                    android:text="Login"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/login_frg_create_account_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/letTheUserLogIn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="#00000000"
                    android:onClick="callSignUpFromLogin"
                    android:text="@string/create_account" />



                </RelativeLayout>





        </LinearLayout>

    </ScrollView>